--- a/web/main.css
+++ b/web/main.css
@@ -7,6 +7,9 @@ body { margin: 0; }
 
 .javascript { background-color: #7dc580; color: #09750d; cursor: pointer; }
 .c-lan { background-color: #7dc580; color: #09750d; cursor: pointer; }
+.go-lan { background-color: #7dc580; color: #09750d; cursor: pointer; }
+.linux { background-color: #7dc580; color: #09750d; cursor: pointer; }
+.bash { background-color: #7dc580; color: #09750d; cursor: pointer; }
 
 
 
